--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,5 @@
+$primary-color: #fc8100;
+
 body {
   margin: 0;
   padding: 0;
@@ -22,7 +24,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  color: #fc8100;
+  color: $primary-color;
   font-family: "Open Sans",Helvetica Neue,Helvetica,Arial,Sans-Serif;
   font-size: 35px;
   font-style: normal;
@@ -30,11 +32,35 @@ h1 {
 }
 
 h2 {
-  color: #fc8100;
+  color: $primary-color;
   font-family: "Open Sans",Helvetica Neue,Helvetica,Arial,Sans-Serif;
   font-size: 21px;
   font-style: normal;
   font-weight: 700;
+}
+
+a {color: $primary-color;}
+
+blockquote {
+  background: #f2f2ef;
+  display: block;
+  font-family: "Open Sans",Helvetica Neue,Helvetica,Arial,Sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+  border-radius: 3px;
+  max-width: 900px;
+}
+
+blockquote p {
+  color: $primary-color;
+  font-family: inherit;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25em;
+  text-align: center;
+  margin: 0;
 }
 
 /* Grid Templates */
