--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,6 +41,11 @@ h2 {
 
 a {color: $primary-color;}
 
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+  text-decoration: none;
+  color: inherit;
+}
+
 blockquote {
   background: #f2f2ef;
   display: block;
