--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,6 +52,19 @@ h3 {
   font-weight: bold;
 }
 
+h5 {
+  color: #999;
+  font-family: "Open Sans", Helvetica Neue, Helvetica, Arial, Sans-serif;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: normal;
+}
+
+h1 + h5 {
+  margin-top: -0.75em;
+  margin-bottom: 1em;
+}
+
 a {
   color: $primary-color;
 }
