--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -100,3 +100,25 @@ blockquote p {
   text-align: center;
   margin: 0;
 }
+
+.event {
+  position: relative;
+  box-sizing: border-box;
+  border-left: 2px solid #eee;
+  padding: 0 0 20px 30px;
+}
+
+.event::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -7px;
+  border: 2px solid #000;
+  background: #fff;
+  border-radius: 50px;
+  width: 12px;
+  height: 12px;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  top: 8px;
+}
